# CodeConcat

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci_cd.yml  main.yml
codeconcat/: __init__.py  cli.py  config.py  file_utils.py  main.py  output.py
tests/: test_main.py
