# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeconcat"
version = "2.2.0" # Increment version for new features/fixes
authors = [
  { name="Luis Guilherme", email="lgpelin92@gmail.com" },
]
description = "A tool to concatenate folders into a single text file, respecting .gitignore and using optional config."
readme = "README.md"
requires-python = ">=3.7" # pathspec might require newer python, check its docs if needed
license = { file="LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
keywords = ["concatenate", "code", "llm", "context", "cli", "tool", "gitignore", "config"]
dependencies = [
    "python-magic",
    "pathspec>=0.11", # Added for .gitignore parsing
]

[project.urls]
Homepage = "https://github.com/lguibr/CodeConcat"
"Bug Tracker" = "https://github.com/lguibr/CodeConcat/issues"
"Source Code" = "https://github.com/lguibr/CodeConcat"

[project.scripts]
codeconcat = "codeconcat.main:main"

[project.optional-dependencies]
test = [
    "ruff",
    "mypy>=1.0",
    "types-setuptools",
    "types-python-magic", # Add if available and needed for mypy
    "pytest>=7.0",
    # Add other test-specific dependencies here
]

# --- Ruff Configuration ---
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.format]
# Defaults are usually fine

# --- Default Config Structure (for documentation/reference) ---
# This section is just a comment showing what the JSON structure looks like
# It's not read by the tool itself.
# Example ~/.codeconcat_config.json or ./.codeconcat_config.json:
# {
#   "use_gitignore": true,
#   "exclude_patterns": [
#     ".*\\.log$",
#     ".*\\.tmp$"
#   ],
#   "whitelist_patterns": []
# }
