# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeconcat"
version = "2.2.1" # Assuming this is your intended version
authors = [
  { name="Luis Guilherme", email="lgpelin92@gmail.com" },
]
description = "A tool to concatenate folders into a single text file, respecting .gitignore and using optional config."
readme = "README.md"
requires-python = ">=3.7"
license = { file="LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
keywords = ["concatenate", "code", "llm", "context", "cli", "tool", "gitignore", "config"]
dependencies = [
    "python-magic",
    "pathspec>=0.11",
]

[project.urls]
Homepage = "https://github.com/lguibr/CodeConcat"
"Bug Tracker" = "https://github.com/lguibr/CodeConcat/issues"
"Source Code" = "https://github.com/lguibr/CodeConcat"

[project.scripts]
codeconcat = "codeconcat.main:main"

[project.optional-dependencies]
# Dependencies needed for testing and development checks
test = [
    "ruff", # Include ruff itself if you want to ensure consistent version
    "mypy>=1.0",
    "types-setuptools",
    # "types-python-magic", # <<< REMOVED THIS LINE
    "pytest>=7.0", # Keep if you use pytest for tests
    # Add other test-specific dependencies here (e.g., coverage)
]

# --- Ruff Configuration ---
[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.format]
# Defaults are usually fine

# --- Mypy Configuration (Optional but Recommended) ---
# [tool.mypy]
# python_version = "3.10"
# warn_return_any = true
# warn_unused_configs = true
